prevent overflow of the menu

--- a/src/navigation.module.css
+++ b/src/navigation.module.css
@@ -124,11 +124,13 @@ div.menuBox:hover>span {
   0% {}
 
   20% {
-    border-radius: 2em;
+    border-radius: 1.4em;
   }
 
   100% {
+    border-radius: .5em;
     border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
   }
 }
 
@@ -158,6 +160,11 @@ ul.menuBox {
   border-top-left-radius: 0;
   box-shadow: 0px 3px 10px -6px black, 0px 2px 4px -1px black;
   z-index: 200;
+}
+
+.tmpStyle {
+  visibility: hidden !important;
+  display: block !important;
 }
 
 @keyframes menuAppear {
